<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.ridowanahmed.childlocator.Login.ParentLoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_login"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold|italic"
            android:textSize="30sp"/>

        <LinearLayout
            android:id="@+id/input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_name_hint"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_child_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="25" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_login_hint"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_child_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sms"
                android:layout_marginTop="16dp"
                android:onClick="requestCode"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_child_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    android:hint="@string/child_code_hint" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/submit"
                android:onClick="childLogin"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
