<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.example.ridowanahmed.childlocator.Login.ParentLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription=""
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:text="@string/parent_login"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/parent_countryCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/parent_login_hint"
                android:textColorHint="@color/colorText"
                android:orientation="horizontal"
                app:hintTextAppearance="@style/FloatingLabel">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_parent_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:textColor="@color/colorText"
                    android:maxLength="11" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="parentLogin"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
